# value-dashboard

./: .gitignore  AGENTS.md  DEVELOPER.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  stock_dashboard.py  watchlist.txt
.github/workflows/: auto-rebase-prs.yml  ci.yml  codeql.yml  live-data-probe.yml
stock_dashboard/: __init__.py  __main__.py  cli.py  data_access.py  logging.py  metrics.py  ui.py
tests/: conftest.py  test_bootstrap.py  test_data_access.py  test_imports.py  test_metrics.py  test_smoke_mode.py  test_stock_dashboard.py  test_streamlit_render.py  test_ui.py  test_watchlist_form.py
