[project]
name = "value-dashboard"
version = "0.0.0"
description = "Value investing dashboard"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
stock-dashboard = "stock_dashboard.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["."]
ignore_missing_imports = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
